--- a/full-stack.html
+++ b/full-stack.html
@@ -138,7 +138,7 @@ Rochester School is a private school focused on environmental sustainability and
 Specifically, we're looking for experienced developers to work on VERY 
 interesting?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/ofMsafwn'>NICE Careers - Senior Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nicesystems/job/ofMsafwn'>NICE Careers - Senior Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Senior Full Stack Developer. R&D / Engineering Raanana, Israel Job Number: 
 8347. Apply. Position at NICE. Responsibilities: Design and develop quality,?...</p>
@@ -203,7 +203,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -215,7 +215,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -259,11 +259,11 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZRB7fwi'>The Havas Group Careers - Full Stack Developer (Java)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZRB7fwi'>The Havas Group Careers - Full Stack Developer (Java)</a></h5> 
 <p><span class="badge badge-light">Toronto Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/lafU8gAClm/Full-Stack-Developer-ReactJS-GraphQL-NodeJSMultiple-Countries'>Full Stack Developer (ReactJS ,GraphQL, NodeJS)-Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/lafU8gAClm/Full-Stack-Developer-ReactJS-GraphQL-NodeJSMultiple-Countries'>Full Stack Developer (ReactJS ,GraphQL, NodeJS)-Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -299,7 +299,7 @@ Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?.
 learning and sales. You will work with the .NET platform in a Windows 
 environment?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/cfac3b53-dc1b-4eaa-b032-4dc685aeeb93'>Houzz - Senior Full-Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/cfac3b53-dc1b-4eaa-b032-4dc685aeeb93'>Houzz - Senior Full-Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -324,7 +324,7 @@ the job details and apply today!</p>
 <p><span class="badge badge-light">San Francisco Mountain View Vancouver Toronto London Paris Berlin Denver Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692146692-pdm-full-stack-engineer'>Aroghia Group PDM Full Stack Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692146692-pdm-full-stack-engineer'>Aroghia Group PDM Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -337,11 +337,11 @@ the job details and apply today!</p>
 <p>1 day ago ... Apply online for the job of Senior Back End Java Developer (Full Stack) at Youtap 
 Limited.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
+<h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Full Stack Developer at Food52.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vokal.recruiterbox.com/jobs/fk036lp'>
+<h5><a href='http://vokal.recruiterbox.com/jobs/fk036lp'>
     Senior Systems / Full-Stack Engineer at Vokal
 </a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
@@ -444,7 +444,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071872-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071872-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
